# squirro-coding-task

./: .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  mongo-init.sh  pyproject.toml  template.env
app/: database.py  main.py  settings.py  summarize.py
app/models/: documents.py
app/routers/: documents.py
git-hooks/: pre-commit
tests/: conftest.py  test_routers.py
